[package]
name = "pagetop-statics"
version = "0.1.3"

description = """
    Librería para automatizar la recopilación de recursos estáticos en PageTop.
"""
categories = ["development-tools::build-utils"]
keywords = ["pagetop", "build", "static", "resources", "file"]

repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["change-detection"]
sort = []

[dependencies]
change-detection = { workspace = true, optional = true }
mime_guess.workspace = true
path-slash.workspace = true

[build-dependencies]
change-detection = { workspace = true, optional = true }
mime_guess.workspace = true
path-slash.workspace = true
